--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 #grid {
     display: grid;
-    gap: 5rem;
-
+    gap: 1rem;
+    padding: 2rem;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 }
 .card {
